--- a/Application/src/main/res/menu/bluetooth_chat.xml
+++ b/Application/src/main/res/menu/bluetooth_chat.xml
@@ -13,22 +13,33 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-        android:id="@+id/secure_connect_scan"
-        android:icon="@drawable/ic_action_device_access_bluetooth_searching"
-        android:showAsAction="ifRoom"
-        android:title="@string/secure_connect"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/insecure_connect_scan"
+        android:icon="@drawable/ic_action_device_access_bluetooth_searching"
+        android:showAsAction="ifRoom"
+        android:title="@string/insecure_connect" />
+
+    <item
+        android:id="@+id/secure_connect_scan"
         android:showAsAction="never"
-        android:title="@string/insecure_connect"/>
+        android:title="@string/secure_connect"/>
 
     <item
         android:id="@+id/discoverable"
         android:showAsAction="never"
         android:title="@string/discoverable"/>
+
+    <item
+        android:id="@+id/command_reset_local_storage"
+        android:showAsAction="never"
+        android:title="@string/reset_local_storage"/>
+
+    <item
+        android:id="@+id/command_reset_sensor_storage"
+        android:showAsAction="never"
+        android:title="@string/reset_sensor_storage"/>
 
 </menu>
