First working prototype that is able to read data and display it in a chart

--- a/Application/src/main/res/menu/bluetooth_chat.xml
+++ b/Application/src/main/res/menu/bluetooth_chat.xml
@@ -42,4 +42,9 @@
         android:showAsAction="never"
         android:title="@string/reset_sensor_storage"/>
 
+    <item
+        android:id="@+id/show_settings_screen"
+        android:showAsAction="never"
+        android:title="@string/settings_title"/>
+
 </menu>
