--- a/Application/src/main/res/layout/activity_settings.xml
+++ b/Application/src/main/res/layout/activity_settings.xml
@@ -15,8 +15,8 @@
         android:layout_height="wrap_content" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnOk"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="@android:string/ok" />
 </LinearLayout>
