--- a/Application/src/main/res/menu/bluetooth_chat.xml
+++ b/Application/src/main/res/menu/bluetooth_chat.xml
@@ -44,6 +44,11 @@
         android:title="@string/reset_sensor_storage"/>
 
     <item
+        android:id="@+id/export_to_file"
+        android:showAsAction="never"
+        android:title="@string/export_data"/>
+
+    <item
         android:id="@+id/show_chart_settings_screen"
         android:showAsAction="always"
         android:title="@string/settings_title"/>
