--- a/Application/src/main/res/menu/bluetooth_chat.xml
+++ b/Application/src/main/res/menu/bluetooth_chat.xml
@@ -49,6 +49,11 @@
         android:title="@string/export_data"/>
 
     <item
+        android:id="@+id/command_co2_calibrate"
+        android:showAsAction="never"
+        android:title="@string/co2_calibrate"/>
+
+    <item
         android:id="@+id/show_chart_settings_screen"
         android:showAsAction="always"
         android:title="@string/settings_title"/>
