Added radiation support Prevent crash when sensor sends wrong range in the data reply Fix dark colors in settings spinners

--- a/Application/src/main/res/values/colors.xml
+++ b/Application/src/main/res/values/colors.xml
@@ -8,5 +8,6 @@
     <color name="datatype_PM1">#505050</color>
     <color name="datatype_PM25">#707070</color>
     <color name="datatype_PM10">#909090</color>
+    <color name="datatype_RADIATION">#808000</color>
 
 </resources>
